force-app/main/default/objects/Insurance__c/fields/Covered_Amount__c.field-meta.xml
<CustomField>
    <fullName>Covered_Amount__c</fullName>
    <label>Covered Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>