force-app/main/default/objects/Insurance__c/fields/Covered_departments__c.field-meta.xml
<CustomField>
    <fullName>Covered_departments__c</fullName>
    <label>Covered departments</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reception</fullName>
            </value>
            <value>
                <fullName>Therapy</fullName>
            </value>
            <value>
                <fullName>Gastroenterology</fullName>
            </value>
            <value>
                <fullName>Surgery</fullName>
            </value>
            <value>
                <fullName>Psychiatric</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>