force-app/main/default/objects/Insurance__c/fields/InsuranceCompany__c.field-meta.xml
<CustomField>
    <fullName>InsuranceCompany__c</fullName>
    <label>InsuranceCompany</label>
    <referenceTo>InsuranceCompany__c</referenceTo>
    <relationshipLabel>Insurances</relationshipLabel>
    <relationshipName>Insurances</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>