force-app/main/default/objects/Insurance__c/validationRules/Psyhiatric_department_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Psyhiatric_department_validation</fullName>
    <active>true</active>
    <description>The psychiatric department can be available only for department type “Adult”</description>
    <errorConditionFormula>AND(INCLUDES(Covered_departments__c, &apos;Psychiatric&apos;), ISPICKVAL( Department_type__c , &apos;Children&apos;)  )</errorConditionFormula>
    <errorMessage>The psychiatric department can be available only for department type “Adult”</errorMessage>
</ValidationRule>